--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "name": "cloudbase-adapter-ali_mp",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack && npm run build:esm",
+    "build:esm": "tsc -p tsconfig.esm.json"
   },
   "keywords": [],
-  "author": "",
+  "author": "jcbbhe",
   "license": "ISC",
   "dependencies": {
     "@cloudbase/adapter-interface": "^0.4.1"
   },
   "devDependencies": {
-    "webpack": "^5.40.0"
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "babel-loader": "^8.2.2",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.4",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2"
   }
 }
